--- a/build.gradle
+++ b/build.gradle
@@ -3,25 +3,31 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 ext{
-    compileSdkVersion = 25
-    buildToolsVersion = '25.0.0'
-    targetSdkVersion = 25
+    compileSdkVersion = 27
+    buildToolsVersion = '27.0.3'
+    targetSdkVersion = 27
     minSdkVersion = 23
     supportLibraryVersion = '25.0.0'
 }
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
