--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,13 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
         </activity>
-        <activity android:name=".weibo.activity.UnLoginActivity"></activity>
-        <activity android:name=".weibo.activity.WebViewActivity"></activity>
-        <activity android:name=".weibo.activity.SearchActivity"></activity>
-        <activity android:name=".weibo.activity.SendWeiboActivity"></activity>
-        <activity android:name=".weibo.activity.UserInfoDisplayActivity"></activity>
-        <activity android:name=".weibo.activity.WeiBoDetailActivity"></activity>
-        <activity android:name=".weibo.activity.BatchAtUserActivity"></activity>
+        <activity android:name=".weibo.ui.activity.UnLoginActivity"></activity>
+        <activity android:name=".weibo.ui.activity.WebViewActivity"></activity>
+        <activity android:name=".weibo.ui.activity.SearchActivity"></activity>
+        <activity android:name=".weibo.ui.activity.SendWeiboActivity"></activity>
+        <activity android:name=".weibo.ui.activity.UserInfoDisplayActivity"></activity>
+        <activity android:name=".weibo.ui.activity.WeiBoDetailActivity"></activity>
+        <activity android:name=".weibo.ui.activity.BatchAtUserActivity"></activity>
         <!--Pick photo-->
         <activity android:name="me.iwf.photopicker.PhotoPickerActivity"
             android:theme="@style/AppTheme" />
@@ -30,7 +30,7 @@
         <activity android:name="me.iwf.photopicker.PhotoPagerActivity"
             android:theme="@style/AppTheme"/>
 
-        <activity android:name=".weibo.activity.WelcomeActivity">
+        <activity android:name=".weibo.ui.activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
